fixed shift bugs and view shifts dropdown

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,6 +12,12 @@ body {
   background: white;
 }
 
+.scrollable-menu {
+  top: -210px !important;
+  left: 406px !important;
+  width: 250px;
+  height: 337px;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial;
